jquery 読み込み パス修正

--- a/replace_src/sample/index.html
+++ b/replace_src/sample/index.html
@@ -32,7 +32,7 @@ li img {
 <li><a href="#list2"><img src="images/button_b.png?ss" width="276" height="75" alt="B" /></a></li>
 </ul>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="../jquery.replace_src.js"></script>
 <script type="text/javascript">
 (function($){
