--- a/resize_events/sample/index.html
+++ b/resize_events/sample/index.html
@@ -20,7 +20,7 @@
 <div id="container">
 <div id="test1">text</div>
 </div>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.js"></script>
 <script src="../jquery.resize_events.js"></script>
 <script type="text/javascript">
 (function($){
