--- a/view_slices/sample/index.html
+++ b/view_slices/sample/index.html
@@ -10,19 +10,12 @@
 #page {
 	overflow : hidden;
 }
-.area-main-01 {
-	max-width    : 800px;
-	margin-right : auto;
-	margin-left  : auto;
-	margin-top   : 2em;
-	position     : relative;
-}
-#pageHead {
+#pHead {
 	border-bottom  : solid 1px #b00;
 	padding-bottom : 0.5em;
 	position       : relative;
 }
-#pageBody-main header h1{
+#pBody-main header h1{
 	position      : absolute;
 	right         : 50%;
 	top           : 50%;
@@ -34,24 +27,33 @@
  	-ms-transform : rotate(-25deg) translateX(50%);
  	transform     : rotate(-25deg) translateX(50%);
 }
+#sec-main {
+	max-width    : 800px;
+	margin-right : auto;
+	margin-left  : auto;
+	margin-top   : 2em;
+	position     : relative;
+}
 </style>
 <!-- /sample -->
 </head>
 <body>
 <div class="page-01" id="page">
 
-<header class="region" id="pageHead">
-<div class="areaGroup">
+<header id="pHead">
+<div class="group">
 <h1>jQuery view_slices</h1>
-</div>
-<!-- /.region#pageHead --></header>
+<!-- /.group --></div>
+<!-- /#pHead --></header>
 
-<section class="pageBody region" id="pageBody-main">
-<div class="areaGroup">
+<section class="pBody" id="pBody-main">
+<div class="group">
+
 <header>
 <h1>Sample</h1>
 </header>
-<div class="area-main-01">
+
+<section class="main-01" id="sec-main">
 <!-- sample -->
 
 <!-- component -->
@@ -105,18 +107,18 @@
 <!-- group-01 --></div>
 <!-- /component -->
 
-</div>
-<!-- /.areaGroup --></div>
-<!-- /.pageBody.region#pageBody-main --></section>
+</section>
+<!-- /.group --></div>
+<!-- /.pBody#pBody-main --></section>
 
 <!-- /.page-01#page --></div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-<script src="../jquery.view_slices.js" charset="utf-8"></script>
+<script src="../jquery.view_slices.js"></script>
 <!-- sample -->
 <script>
 (function($){
-	$('.area-main-01>*').view_slices();
+	$('.main-01>*').view_slices();
 })(jQuery);
 </script>
 <!-- /sample -->
