マイナーチェンジ

--- a/view_slices/sample/index.html
+++ b/view_slices/sample/index.html
@@ -58,22 +58,24 @@
 
 <!-- component -->
 <ul class="list-01">
-<li>hoge</li>
-<li>hogege</li>
+<li>Lorem ipsum.</li>
+<li>Quas, sed.</li>
+<li>Aliquam, ad?</li>
 <!-- list-01 --></ul>
 <!-- /component -->
 
 <!-- component -->
 <ul class="linkList-01">
-<li><a href="#">hoge</a></li>
-<li><a href="#">hogehoge</a></li>
+<li><a href="#">Lorem ipsum.</a></li>
+<li><a href="#">Suscipit, nulla.</a></li>
+<li><a href="#">Velit, architecto.</a></li>
 <!-- linkList --></ul>
 <!-- /component -->
 
 <!-- component -->
 <ol class="orderdList-01">
-<li>hoge</li>
-<li>hogege</li>
+<li>Lorem ipsum dolor.</li>
+<li>Minima, dolore magni.</li>
 <!-- orderdList-01 --></ol>
 <!-- /component -->
 
@@ -81,11 +83,11 @@
 <div class="pair-01">
 <figure>
 <img src="img/sample.png" alt="sample" width="300" height="200" />
-<figcaption>hoge</figcaption>
+<figcaption>Lorem.</figcaption>
 </figure>
 <figure>
 <img src="img/sample.png" alt="sample" width="300" height="200" />
-<figcaption>hoge</figcaption>
+<figcaption>Eligendi.</figcaption>
 </figure>
 <!-- pair-01 --></div>
 <!-- /component -->
@@ -94,15 +96,15 @@
 <div class="group-01">
 <figure>
 <img src="img/sample.png" alt="sample" width="300" height="200" />
-<figcaption>hoge</figcaption>
+<figcaption>Lorem.</figcaption>
 </figure>
 <figure>
 <img src="img/sample.png" alt="sample" width="300" height="200" />
-<figcaption>hoge</figcaption>
+<figcaption>Tempore!</figcaption>
 </figure>
 <figure>
 <img src="img/sample.png" alt="sample" width="300" height="200" />
-<figcaption>hoge</figcaption>
+<figcaption>Fugit?</figcaption>
 </figure>
 <!-- group-01 --></div>
 <!-- /component -->
